first start on location-service

--- a/HiNote/HiNote/Info.plist
+++ b/HiNote/HiNote/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>To get location based notification, you need to enable location services.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>To get location based notification, you need to enable location services.</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
